Editing out of office logic

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
         <div class="floatingHeader hideBig">MY TIME OF BALANCES</div>
         <h3 class="hideSmall">MY TIME OF BALANCES</h3>
         <app-progress-bar
-          [myLeaves]="myLeaves"
+          [allMyLeaves]="myLeaves"
           [date_of_joining]="date_of_joining"
         />
       </div> </app-card
