--- a/src/app/components/dashboard/out-of-office/out-of-office.component.css
+++ b/src/app/components/dashboard/out-of-office/out-of-office.component.css
@@ -1,3 +1,9 @@
+h4 {
+  margin-bottom: 1rem;
+  text-align: left;
+  color: #9c27b0;
+}
+
 li {
   margin-bottom: 2rem;
 }
@@ -45,7 +51,7 @@ p {
 }
 
 .holiday {
-  background-color: #bbb;
+  background-color: #ddd;
   color: #fff;
 }
 
