Editing calendar halfDay

--- a/src/app/components/calendar/employees-calendar/employees-calendar.component.css
+++ b/src/app/components/calendar/employees-calendar/employees-calendar.component.css
@@ -229,6 +229,10 @@ h2 {
 }
 
 @media (max-width: 400px) {
+  .calendarContainer {
+    max-width: 256px;
+  }
+
   .tableContainer {
     width: 100%;
   }
@@ -250,5 +254,15 @@ h2 {
   .halfDayAm::after {
     width: 23px;
     height: 23px;
+  }
+
+  .halfDayPm::before {
+    width: 40%;
+    right: 10%;
+  }
+
+  .halfDayAm::before {
+    width: 40%;
+    left: 10%;
   }
 }
