--- a/src/app/components/leave-management/leave-management.component.html
+++ b/src/app/components/leave-management/leave-management.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="cancelRequest">
           <button (click)="deleteRequest(leave.id)">
-            Cancel Leave Reuest
+            Cancel Leave Request
             <i class="fa fa-trash trash" aria-hidden="true"></i>
           </button>
         </div>
@@ -54,7 +54,7 @@
           (click)="openRequestForm()"
           [disabled]="foundPending"
         >
-          Send Leave Reuest
+          Send Leave Request
           <i class="fa fa-paper-plane plane" aria-hidden="true"></i>
         </button>
 
